# kiponos-io

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
agent-kit/: .gitignore  DESIGN.md  README.md  install.sh  pyproject.toml
agent-kit/kiponos/: __init__.py  __main__.py  cli.py  client.py  paths.py
agent-kit/kiponos_agent_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent-kit/kiponos_mcp/: __init__.py  server.py
agent-kit/skill/: SKILL.md
agent-kit/skill/references/: mcp-tools.md  onboarding.md
app/: build.gradle
docs/: GETTING-STARTED.md  PUBLIC-SANDBOX.md  PUBLISH-READY-BACKLOG.md  crunchbase-pending-devto.md  devto-ab-checkout-weights.md  devto-accounting-month-end.md  devto-accounting-tax-rates.md  devto-agent-live-config-mcp-skill-mindshift.md  devto-agriculture-irrigation-schedule.md  devto-aha-batch-chunk.md  devto-aha-bulkhead-concurrent.md  devto-aha-cache-ttl.md  devto-aha-canary-percent.md  devto-aha-circuit-breaker-threshold.md  devto-aha-circuit-wait-open.md  devto-aha-cors-max-age.md  devto-aha-debounce-ms.md  devto-aha-elasticsearch-scroll-timeout.md  devto-aha-executor-queue-capacity.md  devto-aha-feign-read-timeout.md  devto-aha-gateway-response-timeout.md  devto-aha-generated-knob-001.md  devto-aha-generated-knob-002.md  devto-aha-generated-knob-003.md  devto-aha-generated-knob-004.md  devto-aha-generated-knob-005.md  devto-aha-generated-knob-006.md  devto-aha-generated-knob-007.md  devto-aha-generated-knob-008.md  devto-aha-generated-knob-009.md  (+1501 more)
(+544 files in other folders)
